src/libACQ/Ni/Include/Flexmotn.h



//Load Spherical Arc
FLEXFUNC flex_load_spherical_arc (BOARD, u8 vectorSpace, u32 radius, f64 planePitch,
            f64 planeYaw, f64 startAngle, f64 travelAngle, u8 inputVector);



//////// Gearing Functions

//Configure Gear Master
FLEXFUNC flex_config_gear_master(BOARD, u8 axis, u8 masterAxisOrEncoderOrADC);


//Enable Gearing
FLEXFUNC flex_enable_gearing(BOARD, u16 gearMap);


//Enable Gearing Single Axis
FLEXFUNC flex_enable_gearing_single_axis (BOARD, u8 axis, u16 enable);


//Load Gear Ratio
FLEXFUNC flex_load_gear_ratio(BOARD, u8 axis, u16 absoluteOrRelative,
									i16 ratioNumerator, u16 ratioDenominator, u8 inputVector);



//////// Advanced Trajectory Functions

//Acquire Trajectory Data
FLEXFUNC flex_acquire_trajectory_data(BOARD, u16 axisMap, u16 numberOfSamples, u16 timePeriod);


//Load Base Velocity
FLEXFUNC flex_load_base_vel(BOARD, u8 axis, u16 baseVelocity, u8 inputVector);


//Load Blend Factor
FLEXFUNC flex_load_blend_fact(BOARD, u8 axisOrVectorSpace, i16 blendFactor, u8 inputVector);


//Load Position Modulus
FLEXFUNC flex_load_pos_modulus(BOARD, u8 axis, u32 positionModulus, u8 inputVector);


//Load Velocity Threshold in RPM
FLEXFUNC flex_load_rpm_thresh(BOARD, u8 axis, f64 threshold, u8 inputVector);


//Load S-Curve Time
FLEXFUNC flex_load_scurve_time(BOARD, u8 axisOrVectorSpace, u16 sCurveTime, u8 inputVector);


//Load Torque Limit
FLEXFUNC flex_load_torque_lim(BOARD, u8 axis, i16 primaryPositiveLimit, i16 primaryNegativeLimit,
												 i16 secondaryPositiveLimit, i16 secondaryNegativeLimit, u8 inputVector);


//Load Torque Offset
FLEXFUNC flex_load_torque_offset(BOARD, u8 axis, i16 primaryOffset, i16 secondaryOffset, u8 inputVector);


//Load Velocity Override
FLEXFUNC flex_load_velocity_override(BOARD, u8 axisOrVectorSpace, f32 overridePercentage, u8 inputVector);


//Load Velocity Threshold
FLEXFUNC flex_load_velocity_threshold(BOARD, u8 axis, u32 threshold, u8 inputVector);
 

//Read DAC
FLEXFUNC flex_read_dac(BOARD, u8 axisOrDAC, u8 returnVector);

//Read DAC
FLEXFUNC flex_read_dac_rtn(BOARD, u8 axisOrDAC, i16 FAR *DACValue);


//Read DAC Limit Status
FLEXFUNC flex_read_dac_limit_status(BOARD, u8 returnVector);

//Read DAC Limit Status
FLEXFUNC flex_read_dac_limit_status_rtn(BOARD, u8 FAR *positiveStatus, u8 FAR *negativeStatus);


//Read Steps Generated
FLEXFUNC flex_read_steps_gen(BOARD, u8 axisOrStepperOutput, u8 returnVector);

//Read Steps Generated
FLEXFUNC flex_read_steps_gen_rtn(BOARD, u8 axisOrStepperOutput, i32 FAR *steps);


//Read Target Position
FLEXFUNC flex_read_target_pos(BOARD, u8 axis, u8 returnVector);

//Read Target Position
FLEXFUNC flex_read_target_pos_rtn(BOARD, u8 axis, i32 FAR *targetPosition);


//Read Trajectory Data
FLEXFUNC flex_read_trajectory_data(BOARD, u8 returnVector);

//Read Trajectory Data
//returnData points to an array of size <= 12 depending upon the
//number of axes data is being acquired for. For 6 axes returnData
//points to an array of size 12.
FLEXFUNC flex_read_trajectory_data_rtn(BOARD, i32 FAR *returnData);



///////////////////////////////////////////////////////////////////////////////////////
// Buffered Functions
///////////////////////////////////////////////////////////////////////////////////////

// Configure Buffer
FLEXFUNC flex_configure_buffer (BOARD, u8 buffer, u8 resource, u16 bufferType, i32 bufferSize,
				u32 totalPoints, u16 oldDataStop, f64 requestedInterval, f64 FAR *actualInterval);


// Write Buffer
FLEXFUNC flex_write_buffer (BOARD, u8 buffer, u32 numberOfPoints, 
				u16 regenerationMode, i32 *data, u8 inputVector);


// Read Buffer
FLEXFUNC flex_read_buffer (BOARD, u8 buffer, u32 numberOfPoints, u8 returnVector);

FLEXFUNC flex_read_buffer_rtn (BOARD, u8 buffer, u32 numberOfPoints, i32* data);


// Check Buffer
FLEXFUNC flex_check_buffer (BOARD, u8 buffer, u8 returnVector);

FLEXFUNC flex_check_buffer_rtn (BOARD, u8 buffer, u32 *backlog, u16 *bufferState,
				u32 *pointsDone);


// Clear Buffer
FLEXFUNC flex_clear_buffer (BOARD, u8 buffer);


///////////////////////////////////////////////////////////////////////////////////////
// Start & Stop Motion Functions
///////////////////////////////////////////////////////////////////////////////////////

//Blend Motion
FLEXFUNC flex_blend(BOARD, u8 axisOrVectorSpace, u16 axisOrVSMap);


//Start Motion
FLEXFUNC flex_start(BOARD, u8 axisOrVectorSpace, u16 axisOrVSMap);


//Stop Motion
FLEXFUNC flex_stop_motion(BOARD, u8 axisOrVectorSpace, u16 stopType, u16 axisOrVSMap);



///////////////////////////////////////////////////////////////////////////////////////
// Motion IO Functions
///////////////////////////////////////////////////////////////////////////////////////

//Configure Inhibit Outputs
FLEXFUNC flex_configure_inhibits(BOARD, u8 axisMap, u8 polarityMap);


//Enable Home Inputs
FLEXFUNC flex_enable_home_inputs(BOARD, u16 homeMap);


//Enable Limits
FLEXFUNC flex_enable_limits(BOARD, u16 limitType, u8 forwardLimitMap, u8 reverseLimitMap);


//Load Software Limit Positions
FLEXFUNC flex_load_sw_lim_pos(BOARD, u8 axis, i32 forwardLimit, i32 reverseLimit, u8 inputVector);


//Read Home Input Status
FLEXFUNC flex_read_home_input_status(BOARD, u8 returnVector);

//Read Home Input Status
FLEXFUNC flex_read_home_input_status_rtn(BOARD, u16 FAR *homeStatus);


//Read Limit Status
FLEXFUNC flex_read_limit_status(BOARD, u16 limitType, u8 returnVector);

//Read Limit Status
FLEXFUNC flex_read_limit_status_rtn(BOARD, u16 limitType, u8 FAR *forwardLimitStatus, u8 FAR *reverseLimitStatus);


//Set Home Input Polarity
FLEXFUNC flex_set_home_polarity(BOARD, u16 homePolarityMap);


//Set Inhibit MOMO
FLEXFUNC flex_set_inhibit_momo(BOARD, u8 mustOn, u8 mustOff);


//Set Limit Input Polarity
FLEXFUNC flex_set_limit_polarity(BOARD, u8 forwardPolarityMap, u8 reversePolarityMap);



//////// Breakpoint  Functions

//Configure Breakpoint
FLEXFUNC flex_configure_breakpoint(BOARD, u8 axisOrEncoder, u16 enableMode, u16 actionOnBreakpoint, u16 reserved);


//Enable Breakpoint
FLEXFUNC flex_enable_breakpoint(BOARD, u8 axisOrEncoder, u16 enable);


//Load Breakpoint Modulus
FLEXFUNC flex_load_bp_modulus(BOARD, u8 axisOrEncoder, u32 breakpointModulus, u8 inputVector);


//Load Breakpoint Position
FLEXFUNC flex_load_pos_bp(BOARD, u8 axisOrEncoder, i32 breakpointPosition, u8 inputVector);


//Read Breakpoint Status
FLEXFUNC flex_read_breakpoint_status(BOARD, u8 axisOrEncoder, u16 breakpointType, u8 returnVector);

//Read Breakpoint Status
FLEXFUNC flex_read_breakpoint_status_rtn(BOARD, u8 axisOrEncoder, u16 breakpointType, u16 FAR *breakpointStatus);


//Enable High-Speed Capture
FLEXFUNC flex_enable_hs_capture(BOARD, u8 axisOrEncoder, u16 enable);


//Read Captured Position
FLEXFUNC flex_read_cap_pos(BOARD, u8 axisOrEncoder, u8 returnVector);

//Read Captured Position
FLEXFUNC flex_read_cap_pos_rtn(BOARD, u8 axisOrEncoder, i32 FAR *capturedPosition);


//Read High-Speed Capture Status
FLEXFUNC flex_read_hs_cap_status(BOARD, u8 axisOrEncoder, u8 returnVector);

//Read High-Speed Capture Status
FLEXFUNC flex_read_hs_cap_status_rtn(BOARD, u8 axisOrEncoder, u16 FAR *highSpeedCaptureStatus);


//Configure High-Speed Capture (replaces flex_set_hs_cap_pol)
FLEXFUNC flex_configure_hs_capture(BOARD, u8 axisOrEncoder, u16 captureMode, u16 reserved);


///////////////////////////////////////////////////////////////////////////////////////
// Find Home & Index Functions
///////////////////////////////////////////////////////////////////////////////////////

//Find Home
FLEXFUNC flex_find_home(BOARD, u8 axis, u16 directionMap);


//Find Index
FLEXFUNC flex_find_index(BOARD, u8 axis, u16 direction, i16 offset);



///////////////////////////////////////////////////////////////////////////////////////
// Analog & Digital IO Functions
///////////////////////////////////////////////////////////////////////////////////////

// Configure PWM Output
FLEXFUNC flex_configure_pwm_output (BOARD, u8 PWMOutput, u16 enable, u16 clock);