src/libACQ/Ni/Include/flexcomp.h



//Set Breakpoint Output MOMO (replaced by flex_set_breakpoint_momo)
FLEXFUNC flex_set_bp_momo(BOARD, u8 axisOrEncoder, u8 mustOn, u8 mustOff);


//Set High-Speed Capture Polarity (replaced by flex_configure_hs_capture)
FLEXFUNC flex_set_hs_cap_pol(BOARD, u8 axisOrEncoder, u16 highSpeedCapturePolarity);