src/libACQ/Ni/Include/FLEXMOTN.BAS


'''''Load Spherical Arc
Declare Function flex_load_spherical_arc Lib "FlexMotion32.dll" (ByVal boardID%, ByVal vectorSpace%, ByVal Radius&, ByVal planePitch#, ByVal planeYaw#, ByVal StartAngle#, ByVal travelAngle#, ByVal inputVector%) As Long


'''''''' Gearing Functions

'''''Configure Gear Master
Declare Function flex_config_gear_master Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, ByVal masterAxisOrEncoderOrADC%) As Long

''''Enable Gearing Single Axis
Declare Function flex_enable_gearing_single_axis Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, ByVal enable%) As Long

'''''Enable Gearing
Declare Function flex_enable_gearing Lib "FlexMotion32.dll" (ByVal boardID%, ByVal gearMap%) As Long

'''''Load Gear Ratio
Declare Function flex_load_gear_ratio Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, ByVal absoluteOrRelative%, ByVal ratioNumerator%, ByVal ratioDenominator%, ByVal inputVector%) As Long



'''''''' Advanced Trajectory Functions

'''''Acquire Trajectory Data
Declare Function flex_acquire_trajectory_data Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisMap%, ByVal numberOfSamples%, ByVal timePeriod%) As Long

'''''Load Base Velocity
Declare Function flex_load_base_vel Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, ByVal baseVelocity%, ByVal inputVector%) As Long

'''''Load Blend Factor
Declare Function flex_load_blend_fact Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, ByVal BlendFactor%, ByVal inputVector%) As Long

'''''Load Position Modulus
Declare Function flex_load_pos_modulus Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, ByVal positionModulus&, ByVal inputVector%) As Long

''''Load Velocity Threshold in RPM
Declare Function flex_load_rpm_thresh Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, ByVal threshold#, ByVal inputVector%) As Long

'''''Load S-Curve Time
Declare Function flex_load_scurve_time Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, ByVal sCurveTime%, ByVal inputVector%) As Long

'''''Load Torque Limit
Declare Function flex_load_torque_lim Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, ByVal primaryPositiveLimit%, ByVal primaryNegativeLimit%, ByVal secondaryPositiveLimit%, ByVal secondaryNegativeLimit%, ByVal inputVector%) As Long

'''''Load Torque Offset
Declare Function flex_load_torque_offset Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, ByVal primaryOffset%, ByVal secondaryOffset%, ByVal inputVector%) As Long

'''''Load Velocity Override
Declare Function flex_load_velocity_override Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, ByVal overridePercentage!, ByVal inputVector%) As Long

''''Load Velocity Threshold
Declare Function flex_load_velocity_threshold Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal velthresh&, ByVal inputVector%) As Long

'''''Read DAC
Declare Function flex_read_dac Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrDAC%, ByVal returnVector%) As Long
'''''Read DAC
Declare Function flex_read_dac_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrDAC%, DACValue%) As Long

'''''Read DAC Limit Status
Declare Function flex_read_dac_limit_status Lib "FlexMotion32.dll" (ByVal boardID%, ByVal returnVector%) As Long
'''''Read DAC Limit Status
Declare Function flex_read_dac_limit_status_rtn Lib "FlexMotion32.dll" (ByVal boardID%, positiveStatus%, negativeStatus%) As Long

'''''Read Steps Generated
Declare Function flex_read_steps_gen Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrStepperOutput%, ByVal returnVector%) As Long
'''''Read Steps Generated
Declare Function flex_read_steps_gen_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrStepperOutput%, steps&) As Long

'''''Read Target Position
Declare Function flex_read_target_pos Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, ByVal returnVector%) As Long
'''''Read Target Position
Declare Function flex_read_target_pos_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, TargetPosition&) As Long

'''''Read Trajectory Data
Declare Function flex_read_trajectory_data Lib "FlexMotion32.dll" (ByVal boardID%, ByVal returnVector%) As Long
'''''Read Trajectory Data
'''''returnData points to an array of size <= 12 depending upon the
'''''number of axes data is being acquired for. For 6 axes returnData
'''''points to an array of size 12.
Declare Function flex_read_trajectory_data_rtn Lib "FlexMotion32.dll" (ByVal boardID%, returnData&) As Long


''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
' Buffered Functions
''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
''''Configure Buffer
Declare Function flex_configure_buffer Lib "FlexMotion32.dll" (ByVal boardID%, ByVal buffer%, ByVal resource%, ByVal bufferType%, ByVal bufferSize&, ByVal totalPoints&, ByVal oldDataStop%, ByVal requestedInterval#, ByRef actualInterval#) As Long

''''Write Buffer
Declare Function flex_write_buffer Lib "FlexMotion32.dll" (ByVal boardID%, ByVal buffer%, ByVal numberOfPoints&, ByVal regenerationMode%, data&, ByVal inputVector%) As Long

''''Read Buffer
Declare Function flex_read_buffer Lib "FlexMotion32.dll" (ByVal boardID%, ByVal buffer%, ByVal numberOfPoints&, ByVal returnVector%) As Long
Declare Function flex_read_buffer_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal buffer%, ByVal numberOfPoints&, data&) As Long

''''Check Buffer
Declare Function flex_check_buffer Lib "FlexMotion32.dll" (ByVal boardID%, ByVal buffer%, ByVal returnVector%) As Long
Declare Function flex_check_buffer_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal buffer%, backlog&, bufferState%, pointsDone&) As Long

''''Clear Buffer
Declare Function flex_clear_buffer Lib "FlexMotion32.dll" (ByVal boardID%, ByVal buffer%) As Long


''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
' Start & Stop Motion
''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
''''Blend Motion
Declare Function flex_blend Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, ByVal axisMap%) As Long

''''Start Motion
Declare Function flex_start Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, ByVal axisMap%) As Long

''''Stop Motion
Declare Function flex_stop_motion Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, ByVal stopType%, ByVal axisOrVSMap%) As Long


''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
' Motion IO Functions
''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
''''Configure Inhibit Outputs
Declare Function flex_configure_inhibits Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisMap%, ByVal polarityMap%) As Long

''''Enable Home Inputs
Declare Function flex_enable_home_inputs Lib "FlexMotion32.dll" (ByVal boardID%, ByVal homeMap%) As Long

''''Enable Limit
Declare Function flex_enable_limits Lib "FlexMotion32.dll" (ByVal boardID%, ByVal limitType%, ByVal forwardLimitMap%, ByVal reverseLimitMap%) As Long

''''Load Software Limit Positions
Declare Function flex_load_sw_lim_pos Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, ByVal forwardLimit&, ByVal reverseLimit&, ByVal inputVector%) As Long

''''Read Home Input Status
Declare Function flex_read_home_input_status Lib "FlexMotion32.dll" (ByVal boardID%, ByVal returnVector%) As Long
''''Read Home Input Status
Declare Function flex_read_home_input_status_rtn Lib "FlexMotion32.dll" (ByVal boardID%, homeStatus%) As Long

''''Read Limit Status
Declare Function flex_read_limit_status Lib "FlexMotion32.dll" (ByVal boardID%, ByVal limitType%, ByVal returnVector%) As Long
''''Read Limit Status
Declare Function flex_read_limit_status_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal limitType%, forwardLimitStatus%, reverseLimitStatus%) As Long

''''Set Home Input Polarity
Declare Function flex_set_home_polarity Lib "FlexMotion32.dll" (ByVal boardID%, ByVal homePolarityMap%) As Long

''''Set Inhibit MOMO
Declare Function flex_set_inhibit_momo Lib "FlexMotion32.dll" (ByVal boardID%, ByVal mustOn%, ByVal mustOff%) As Long

''''Set Limit Input Polarity
Declare Function flex_set_limit_polarity Lib "FlexMotion32.dll" (ByVal boardID%, ByVal forwardPolarityMap%, ByVal reversePolarityMap%) As Long


'''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
'''' Breakpoint  Functions
'''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''

''''Configure Breakpoint
Declare Function flex_configure_breakpoint Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrEncoder%, ByVal enableMode%, ByVal actionOnBreakpoint%, ByVal reserved%) As Long

''''Enable Breakpoint
Declare Function flex_enable_breakpoint Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrEncoder%, ByVal enable%) As Long

''''Load Breakpoint Modulus
Declare Function flex_load_bp_modulus Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrEncoder%, ByVal breakpointModulus&, ByVal inputVector%) As Long

''''Load Breakpoint Position
Declare Function flex_load_pos_bp Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, ByVal breakpointPosition&, ByVal breakpointPosition%) As Long

''''Read Breakpoint Status
Declare Function flex_read_breakpoint_status Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrEncoder%, ByVal breakpointType%, ByVal returnVector%) As Long
''''Read Breakpoint Status
Declare Function flex_read_breakpoint_status_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrEncoder%, ByVal breakpointType%, breakpointStatus%) As Long

''Set Breakpoint Output MOMO
Declare Function flex_set_bp_momo Lib "FlexMotion32.dll" (ByVal boardID%, ByVal device%, ByVal mustOn%, ByVal mustOff%) As Long

'''''''' High-speed Capture Functions

''''Enable High-Speed Capture
Declare Function flex_enable_hs_capture Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrEncoder%, ByVal enable%) As Long

''''Read Captured Position
Declare Function flex_read_cap_pos Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrEncoder%, ByVal returnVector%) As Long
''''Read Captured Position
Declare Function flex_read_cap_pos_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrEncodere%, capturedPosition&) As Long

''''Read High-Speed Capture Status
Declare Function flex_read_hs_cap_status_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrEncoder%, highSpeedCaptureStatus%) As Long
''''Read High-Speed Capture Status
Declare Function flex_read_hs_cap_status Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrEncoder%, ByVal returnVector%) As Long

''''Configure High-Speed Capture (replaces flex_set_hs_cap_pol)
Declare Function flex_configure_hs_capture Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrEncoder%, ByVal captureMode%, ByVal reserved%) As Long

''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
'Find Home & Index Functions
''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
''''Find Home
Declare Function flex_find_home Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, ByVal directionMap%) As Long

''''Find Index
Declare Function flex_find_index Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, ByVal Direction%, ByVal offset%) As Long

''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
' Analog & Digital IO Functions
''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
''''Configure PWM Output
Declare Function flex_configure_pwm_output Lib "FlexMotion32.dll" (ByVal boardID%, ByVal PWMOutput%, ByVal enable%, ByVal clock%) As Long
